[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Common/Res/deafultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Common/Scenes/MainMenuScene.gd" type="Script" id=3]

[node name="MainMenuScene" type="Node"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 716.0
margin_top = 375.0
margin_right = 883.0
margin_bottom = 524.0

[node name="PlayButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 167.0
margin_bottom = 47.0
rect_min_size = Vector2( 128, 30 )
text = "Play"

[node name="HowToPlay" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 167.0
margin_bottom = 98.0
text = "How to play"

[node name="ExitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 167.0
margin_bottom = 149.0
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CenterContainer"]
visible = false
margin_left = 400.0
margin_top = 124.0
margin_right = 1200.0
margin_bottom = 775.0

[node name="Panel" type="Panel" parent="Control/CenterContainer/VBoxContainer2"]
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 800, 600 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 20.0
margin_right = -15.0
margin_bottom = -15.0
text = "Your Evil Guest is Hungry!

Maybe you could try and grow some of those seeds you have

Or try cooking them in that stove.

The slot machine might be able to help out, or maybe not...

Whatever you do don't let his hunger run out.

WASD to move between rooms
Mouse and left click to interact with objects
"

[node name="Button" type="Button" parent="Control/CenterContainer/VBoxContainer2"]
margin_top = 604.0
margin_right = 800.0
margin_bottom = 651.0
text = "Back"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer2/Button" to="." method="_on_Button_pressed"]
